remove jsx-control-statements rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,44 +4,52 @@
     "jest": true
   },
   "parser": "babel-eslint",
-  "plugins": [
-    "react",
-    "react-native",
-    "prettier",
-    "jsx-control-statements"
-  ],
+  "plugins": ["react", "react-native", "prettier"],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true,
       "modules": true
     }
   },
-  "extends" : [
+  "extends": [
     "eslint:recommended",
     "airbnb",
     "plugin:react/recommended",
     "plugin:react-native/all",
-    "plugin:prettier/recommended",
-    "plugin:jsx-control-statements/recommended"
+    "plugin:prettier/recommended"
   ],
-  "rules" : {
+  "rules": {
     "import/prefer-default-export": "off",
     "react/require-default-props": "off",
     "react/forbid-prop-types": "off",
-    "arrow-body-style" : "warn",
-    "react/jsx-no-undef": [2, {
-      "allowGlobals": true
-    }],
-    "react/jsx-filename-extension": [1, {
-      "extensions": [".js", ".jsx"]
-    }],
-    "react/prefer-stateless-function": [2, {
-      "ignorePureComponents": true
-    }],
-    "react/no-unescaped-entities": ["error", {
-      "forbid": [">", "}"]
-    }],
-    "import/no-extraneous-dependencies": ["error", {
+    "arrow-body-style": "warn",
+    "react/jsx-no-undef": [
+      2,
+      {
+        "allowGlobals": true
+      }
+    ],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ],
+    "react/prefer-stateless-function": [
+      2,
+      {
+        "ignorePureComponents": true
+      }
+    ],
+    "react/no-unescaped-entities": [
+      "error",
+      {
+        "forbid": [">", "}"]
+      }
+    ],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
         "devDependencies": true,
         "optionalDependencies": false,
         "peerDependencies": false
@@ -49,6 +57,8 @@
     ]
   },
   "settings": {
-    "import/resolver": {"node": {"extensions": [".js", ".android.js", ".ios.js"]}}
+    "import/resolver": {
+      "node": { "extensions": [".js", ".android.js", ".ios.js"] }
+    }
   }
 }
